[gd_scene load_steps=9 format=2]

[ext_resource path="res://Materials/NormalFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Materials/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/KenneyUI/PNG/blue_button03.png" type="Texture" id=3]
[ext_resource path="res://Assets/KenneyUI/PNG/blue_button01.png" type="Texture" id=4]
[ext_resource path="res://Assets/KenneyUI/PNG/blue_button00.png" type="Texture" id=5]
[ext_resource path="res://Assets/KenneyUI/PNG/dark_grey_panel.png" type="Texture" id=6]
[ext_resource path="res://Assets/KenneyUI/PNG/blue_button04.png" type="Texture" id=7]
[ext_resource path="res://Scenes/UI/LoginScreen.gd" type="Script" id=8]

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.667419
margin_bottom = -0.66748
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 600 )
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background/LoginContainer"]
margin_right = 336.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Glima"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/LoginContainer"]
margin_top = 49.0
margin_right = 336.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameTitle" type="Label" parent="Background/LoginContainer"]
margin_top = 73.0
margin_right = 336.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 1 )
text = "Username"

[node name="Username" type="LineEdit" parent="Background/LoginContainer"]
margin_top = 95.0
margin_right = 336.0
margin_bottom = 119.0
text = "admin"

[node name="MarginContainer3" type="MarginContainer" parent="Background/LoginContainer"]
margin_top = 123.0
margin_right = 336.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordTitle" type="Label" parent="Background/LoginContainer"]
margin_top = 147.0
margin_right = 336.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 1 )
text = "Password"

[node name="Password" type="LineEdit" parent="Background/LoginContainer"]
margin_top = 169.0
margin_right = 336.0
margin_bottom = 193.0
text = "adminadmin"
secret = true

[node name="MarginContainer2" type="MarginContainer" parent="Background/LoginContainer"]
margin_top = 197.0
margin_right = 336.0
margin_bottom = 307.0
rect_min_size = Vector2( 0, 110 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="TextureButton" parent="Background/LoginContainer"]
margin_left = 73.0
margin_top = 311.0
margin_right = 263.0
margin_bottom = 360.0
rect_min_size = Vector2( 190, 49 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Background/LoginContainer/LoginButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Login"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccountButton" type="TextureButton" parent="Background/LoginContainer"]
margin_left = 73.0
margin_top = 364.0
margin_right = 263.0
margin_bottom = 413.0
rect_min_size = Vector2( 190, 49 )
size_flags_horizontal = 4
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Background/LoginContainer/CreateAccountButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Create Account"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccountContainer" type="VBoxContainer" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background/CreateAccountContainer"]
margin_right = 336.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "New ACC"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/CreateAccountContainer"]
margin_top = 49.0
margin_right = 336.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameTitle" type="Label" parent="Background/CreateAccountContainer"]
margin_top = 73.0
margin_right = 336.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 1 )
text = "Username"

[node name="Username" type="LineEdit" parent="Background/CreateAccountContainer"]
margin_top = 95.0
margin_right = 336.0
margin_bottom = 119.0

[node name="MarginContainer3" type="MarginContainer" parent="Background/CreateAccountContainer"]
margin_top = 123.0
margin_right = 336.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordTitle" type="Label" parent="Background/CreateAccountContainer"]
margin_top = 147.0
margin_right = 336.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 1 )
text = "Password"

[node name="Password" type="LineEdit" parent="Background/CreateAccountContainer"]
margin_top = 169.0
margin_right = 336.0
margin_bottom = 193.0
secret = true

[node name="RPasswordTitle" type="Label" parent="Background/CreateAccountContainer"]
margin_top = 197.0
margin_right = 336.0
margin_bottom = 215.0
custom_fonts/font = ExtResource( 1 )
text = "Repeat Password"

[node name="RPassword" type="LineEdit" parent="Background/CreateAccountContainer"]
margin_top = 219.0
margin_right = 336.0
margin_bottom = 243.0
secret = true

[node name="MarginContainer2" type="MarginContainer" parent="Background/CreateAccountContainer"]
margin_top = 247.0
margin_right = 336.0
margin_bottom = 307.0
rect_min_size = Vector2( 0, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmCreateButton" type="TextureButton" parent="Background/CreateAccountContainer"]
margin_left = 73.0
margin_top = 311.0
margin_right = 263.0
margin_bottom = 360.0
rect_min_size = Vector2( 190, 49 )
size_flags_horizontal = 4
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Background/CreateAccountContainer/ConfirmCreateButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Confirm"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Background/CreateAccountContainer"]
margin_left = 73.0
margin_top = 364.0
margin_right = 263.0
margin_bottom = 413.0
rect_min_size = Vector2( 190, 49 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Background/CreateAccountContainer/BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GatewayLabel" type="Label" parent="Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -100.667
margin_right = 168.0
margin_bottom = -82.6675
custom_fonts/font = ExtResource( 1 )
text = "Gateway IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gateway" type="LineEdit" parent="Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -78.061
margin_right = 168.0
margin_bottom = -54.061
text = "194.36.88.129"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="Background/LoginContainer/Password" to="." method="_on_password_done"]
[connection signal="pressed" from="Background/LoginContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="Background/LoginContainer/CreateAccountButton" to="." method="_on_goto_create_pressed"]
[connection signal="pressed" from="Background/CreateAccountContainer/ConfirmCreateButton" to="." method="_on_create_account"]
[connection signal="pressed" from="Background/CreateAccountContainer/BackButton" to="." method="_on_create_back_pressed"]
[connection signal="text_changed" from="Background/Gateway" to="." method="_on_gateway_ip_changed"]
